--- a/my-proof.manifest.template
+++ b/my-proof.manifest.template
@@ -1,5 +1,5 @@
 # Adjust this as needed.
-sgx.enclave_size = "256M"
+sgx.enclave_size = "1G"
 
 # Increase this as needed, e.g., if you run a web server.
 sgx.max_threads = 4
